# litert-lm-edge-rs

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: build-linux-runtime.yml  build-ue-ffi-win64.yml  build-windows-runtime.yml
litert-lm-edge/: Cargo.toml
litert-lm-edge-sys/: Cargo.toml  build.rs
litert-lm-edge-sys/src/: fallback.rs  lib.rs
litert-lm-edge-ue-ffi/: Cargo.toml  build.rs  cbindgen.toml
litert-lm-edge-ue-ffi/include/: litert_lm_edge_ue_ffi.h
litert-lm-edge-ue-ffi/src/: lib.rs
litert-lm-edge/examples/: conversation_multimodal.rs  conversation_tools.rs  download_model.rs  engine_config.rs  multimodal_generate.rs  raw_conversation_json.rs  simple_generate.rs  stream_generate.rs  tokio_generate.rs  tokio_stream_generate.rs
litert-lm-edge/src/: conversation.rs  error.rs  input.rs  lib.rs  message.rs  model_download.rs  stream.rs  tokio_runtime.rs  tool.rs
scripts/: build_ue_plugin_win64.ps1  download_gemma4_model.ps1  prepare_litert_lm_darwin_arm64.sh  prepare_litert_lm_linux_x86_64.sh  prepare_litert_lm_windows_x86_64.ps1
