[workspace]
members = [
    "litert-lm-edge",
    "litert-lm-edge-sys",
]
resolver = "2"

[workspace.dependencies]
litert-lm-edge-sys = { path = "litert-lm-edge-sys", default-features = false }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/google-ai-edge/LiteRT-LM"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
