[package]
name = "litert-lm-edge"
description = "Safe Rust wrapper for LiteRT-LM text generation and streaming."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
litert-lm-edge-sys.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"], optional = true }
ureq = { version = "2", optional = true }

[features]
default = [
    "vendor-darwin-arm64",
    "vendor-linux-x86_64",
    "vendor-windows-x86_64",
]
generate-bindings = ["litert-lm-edge-sys/generate-bindings"]
model-download = ["dep:sha2", "dep:ureq"]
system = ["litert-lm-edge-sys/system"]
tokio = ["dep:tokio"]
vendor-darwin-arm64 = ["litert-lm-edge-sys/vendor-darwin-arm64"]
vendor-linux-x86_64 = ["litert-lm-edge-sys/vendor-linux-x86_64"]
vendor-windows-x86_64 = ["litert-lm-edge-sys/vendor-windows-x86_64"]

[dev-dependencies]

[[example]]
name = "tokio_generate"
required-features = ["tokio"]

[[example]]
name = "tokio_stream_generate"
required-features = ["tokio"]

[[example]]
name = "download_model"
required-features = ["model-download"]

[lints]
workspace = true
